<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.001" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/drop_shadow_rate_0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />
    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:srcCompat="@drawable/rating_0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />
    <androidx.cardview.widget.CardView
        android:id="@+id/creenRating"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1">
        <LinearLayout
            android:paddingHorizontal="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <TextView
                android:layout_marginTop="30dp"
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_are_working_hard_for_a_better_user_experience"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:layout_marginHorizontal="5dp"
                android:maxLines="2"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_d_greatly_appreciate_if_you_can_rate_us"
                android:textColor="@color/color_settings_item"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:paddingHorizontal="10dp"
                android:maxLines="2"
                android:textSize="13dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RatingBar
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/rtb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:stepSize="1"
                    android:progressTint="#2B9999"
                    android:secondaryProgressTint="#2B9999" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:srcCompat="@drawable/star_plus"
                    app:layout_constraintLeft_toRightOf="@+id/rtb"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/star_here"
                    app:layout_constraintRight_toRightOf="@+id/rtb"
                    app:layout_constraintTop_toBottomOf="@+id/rtb"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/textbest"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="The best we can get :)"
                android:textColor="#2B9999"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:maxLines="2"
                android:textSize="13dp"/>
            <EditText
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:id="@+id/editFeedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Writing something..."
                android:textSize="16.0sp" />
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:maxLines="1"
                    android:layout_margin="5dp"
                    android:id="@+id/btnLater"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    android:text="@string/may_be_later"
                    android:textSize="12sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:id="@+id/btnRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    android:text="@string/rate"
                    android:textSize="12sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>