<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3F5F6">

        <com.ntdapp.qrcode.barcode.scanner.helpers.widget.BaseStatusBar
            android:id="@+id/status_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/img_top"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@drawable/bg_title_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_bar" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_bar"
            app:srcCompat="@drawable/ic_back_setting" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_back"
            app:layout_constraintStart_toEndOf="@+id/ic_back"
            app:layout_constraintTop_toTopOf="@+id/ic_back" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="21dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_setting">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="@dimen/margin_13"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginBottom="11dp"
                    android:elevation="@dimen/elevation_10"
                    app:cardCornerRadius="@dimen/margin_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_play_sound"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="13dp"
                            android:layout_marginTop="20dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_volume_setting" />

                        <TextView
                            android:id="@+id/text_view_play_sound"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="19dp"
                            android:gravity="start|center_vertical"
                            android:text="@string/play_sound"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_body"
                            app:layout_constraintBottom_toBottomOf="@+id/img_play_sound"
                            app:layout_constraintEnd_toStartOf="@+id/switch_compat_play_sound"
                            app:layout_constraintStart_toEndOf="@+id/img_play_sound"
                            app:layout_constraintTop_toTopOf="@+id/img_play_sound" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch_compat_play_sound"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="@dimen/margin_16"
                            app:layout_constraintBottom_toBottomOf="@+id/img_play_sound"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_vibrate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            app:layout_constraintStart_toStartOf="@+id/img_play_sound"
                            app:layout_constraintTop_toBottomOf="@+id/img_play_sound"
                            app:srcCompat="@drawable/ic_vibrate_setting" />

                        <TextView
                            android:id="@+id/text_view_vibrate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:text="@string/vibrate"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_body"
                            app:layout_constraintBottom_toBottomOf="@+id/img_vibrate"
                            app:layout_constraintEnd_toStartOf="@+id/switch_compat_vibrate"
                            app:layout_constraintStart_toStartOf="@+id/text_view_play_sound"
                            app:layout_constraintTop_toTopOf="@+id/img_vibrate" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch_compat_vibrate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@+id/img_vibrate"
                            app:layout_constraintEnd_toEndOf="@+id/switch_compat_play_sound"
                            app:layout_constraintTop_toTopOf="@+id/img_vibrate" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_save_history"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            app:layout_constraintStart_toStartOf="@+id/img_vibrate"
                            app:layout_constraintTop_toBottomOf="@+id/img_vibrate"
                            app:srcCompat="@drawable/ic_save_history" />

                        <TextView
                            android:id="@+id/text_view_save_history"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:text="@string/save_history"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_body"
                            app:layout_constraintBottom_toBottomOf="@+id/img_save_history"
                            app:layout_constraintEnd_toStartOf="@+id/switch_compat_save_history"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toStartOf="@+id/text_view_vibrate"
                            app:layout_constraintTop_toTopOf="@+id/img_save_history" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch_compat_save_history"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@+id/img_save_history"
                            app:layout_constraintEnd_toEndOf="@+id/switch_compat_vibrate"
                            app:layout_constraintTop_toTopOf="@+id/img_save_history" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_copy_to_clipboard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            app:layout_constraintStart_toStartOf="@+id/img_save_history"
                            app:layout_constraintTop_toBottomOf="@+id/img_save_history"
                            app:srcCompat="@drawable/ic_copy_setting" />

                        <TextView
                            android:id="@+id/text_view_copy_to_clipboard"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:text="@string/copy_to_clipboard"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_body"
                            app:layout_constraintBottom_toBottomOf="@+id/img_copy_to_clipboard"
                            app:layout_constraintEnd_toStartOf="@+id/switch_compat_copy_to_clipboard"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toStartOf="@+id/text_view_save_history"
                            app:layout_constraintTop_toTopOf="@+id/img_copy_to_clipboard" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch_compat_copy_to_clipboard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_16"
                            app:layout_constraintBottom_toBottomOf="@+id/img_copy_to_clipboard"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/text_view_copy_to_clipboard"
                            app:layout_constraintTop_toTopOf="@+id/img_copy_to_clipboard" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_about_us"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            app:layout_constraintStart_toStartOf="@+id/img_copy_to_clipboard"
                            app:layout_constraintTop_toBottomOf="@+id/img_copy_to_clipboard"
                            app:srcCompat="@drawable/ic_about_us_setting" />

                        <TextView
                            android:id="@+id/text_view_about_us"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:clickable="true"
                            android:onClick="startAboutUsActivity"
                            android:text="@string/about_us"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_body"
                            app:layout_constraintBottom_toBottomOf="@+id/img_about_us"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toStartOf="@+id/text_view_copy_to_clipboard"
                            app:layout_constraintTop_toTopOf="@+id/img_about_us" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_privacy_policy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            app:layout_constraintStart_toStartOf="@+id/img_about_us"
                            app:layout_constraintTop_toBottomOf="@+id/img_about_us"
                            app:srcCompat="@drawable/ic_privacy_policy" />

                        <TextView
                            android:id="@+id/text_view_privacy_policy"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_16"
                            android:clickable="true"
                            android:onClick="startPrivacyPolicyActivity"
                            android:text="@string/privacy_policy"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_body"
                            app:layout_constraintBottom_toBottomOf="@+id/img_privacy_policy"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toStartOf="@+id/text_view_copy_to_clipboard"
                            app:layout_constraintTop_toTopOf="@+id/img_privacy_policy"
                            app:layout_constraintVertical_chainStyle="packed" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_feeback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            app:layout_constraintStart_toStartOf="@+id/img_privacy_policy"
                            app:layout_constraintTop_toBottomOf="@+id/img_privacy_policy"
                            app:srcCompat="@drawable/img_feedback" />

                        <TextView
                            android:id="@+id/text_view_feedback"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:clickable="true"
                            android:onClick="startFeedbackActivity"
                            android:text="@string/feedback"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_body"
                            app:layout_constraintBottom_toBottomOf="@+id/img_feeback"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toStartOf="@+id/text_view_privacy_policy"
                            app:layout_constraintTop_toTopOf="@+id/img_feeback"
                            app:layout_constraintVertical_chainStyle="spread_inside" />

                        <FrameLayout
                            android:id="@+id/fl_native"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="15dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/img_feeback"
                            tools:layout_editor_absoluteX="12dp">

                            <include layout="@layout/ads_native_shimmer_large" />
                        </FrameLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/toolbar_height"
            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            android:visibility="gone"
            app:contentInsetStartWithNavigation="@dimen/margin_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_bar"
            app:title="@string/settings" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>